# messenger

./: .env.example  .gitignore  .tauri_updater_key  .tauri_updater_key.pub  CHANGELOG.md  CLAUDE.md  README.md  bubble-preload.js  bubble.html  chat-panel-preload.js  icon.icns  main.js  package-lock.json  package.json  preload.js  settings-preload.js  settings.html  viewer-preload.js  viewer.html  viewer.js
.claude/: settings.local.json
scripts/: release.sh  update-release-notes.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
