[package]
name = "messenger"
version = "1.0.22"
description = "Messenger desktop app for macOS"
authors = ["Vinh Tran (VinhTNK)"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
